[gd_scene load_steps=4 format=3 uid="uid://dxp2wfslgwymt"]

[ext_resource type="PackedScene" uid="uid://1vl08t4ulppt" path="res://Scenes/CardMechanics.tscn" id="1_hsyf5"]
[ext_resource type="Script" path="res://Scenes/BlackjackGameManager.gd" id="2_a2uf2"]
[ext_resource type="Script" path="res://EnemyHand.gd" id="2_or1ju"]

[node name="Main" instance=ExtResource("1_hsyf5")]

[node name="CardSlot" parent="." index="1"]
visible = false

[node name="EnemyCardSlot" parent="." index="2"]
visible = false

[node name="PlayerTotalRichTextLabel" type="RichTextLabel" parent="PlayerHand" index="0"]
offset_left = 647.0
offset_top = 819.0
offset_right = 778.0
offset_bottom = 859.0
text = "Hand Total: "

[node name="EnemyHand" type="Node2D" parent="." index="4"]
script = ExtResource("2_or1ju")

[node name="Deck" parent="." index="5"]
position = Vector2(691.975, 528)

[node name="EndTurnButton" parent="." index="7"]
offset_left = 652.0
offset_top = 338.0
offset_right = 730.0
offset_bottom = 369.0

[node name="CardGameManager" parent="." index="8"]
script = ExtResource("2_a2uf2")

[node name="HitButton" type="Button" parent="." index="10"]
offset_left = 609.0
offset_top = 617.0
offset_right = 640.0
offset_bottom = 648.0
text = "Hit"
metadata/_edit_use_anchors_ = true

[node name="StandButton" type="Button" parent="." index="11"]
offset_left = 717.0
offset_top = 616.0
offset_right = 770.0
offset_bottom = 647.0
text = "Stand"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="HitButton" to="CardGameManager" method="_on_hit_button_pressed"]
[connection signal="pressed" from="StandButton" to="CardGameManager" method="_on_stand_button_pressed"]
